# linuxcnc

./: .cvsignore  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  BUILD_STATUS.md  Bug-notes  CONTRIBUTING.md  COPYING  COPYING.more  INSTALL  ISSUE_TEMPLATE.md  Kconfig  MILLTASK_GOROUTINE_PROBLEM.md  MILLTASK_REVIEW_FINDINGS.md  MISSING_FEATURES.md  MODULARIZATION-PHASE1.md  Make.rules  Makefile  Makefile.inc.in  NIXOS_SETUP.md  PRODUCTION_READINESS.md  PULL_REQUEST_TEMPLATE.md  QUICKSTART_NIX.md  README  README.asciidoc  README.javascript  README.md  README.realtime-nomenclature  README.xenomai  README_LINUXCNC.md  README_es.md  REVIEW_FINDINGS.md  RTAI_XENOMAI_REMOVAL_PLAN.md  SCURVE_QUICKREF.txt  TODO  USPACE_IMPLEMENTATION.md  VERSION  check290es.txt  (+27 more)
cmake/: CMakeLists.txt  build_all
cmake/classicladder/: CMakeLists.txt
cmake/components/5axiskins/: CMakeLists.txt
cmake/components/and2/: CMakeLists.txt
cmake/components/comp/: CMakeLists.txt
cmake/components/corexykins/: CMakeLists.txt
cmake/components/ddt/: CMakeLists.txt
cmake/components/ethercat/: CMakeLists.txt  myNote.txt  runtest
cmake/components/genhexkins/: CMakeLists.txt
cmake/components/genserkins/: CMakeLists.txt
cmake/components/homemod/: CMakeLists.txt
cmake/components/hypot/: CMakeLists.txt
cmake/components/limit2/: CMakeLists.txt
cmake/components/lineardeltakins/: CMakeLists.txt
cmake/components/lowpass/: CMakeLists.txt
cmake/components/maxkins/: CMakeLists.txt
cmake/components/motmod/: CMakeLists.txt  runtest
cmake/components/near/: CMakeLists.txt
cmake/components/or2/: CMakeLists.txt
cmake/components/pentakins/: CMakeLists.txt
cmake/components/pumakins/: CMakeLists.txt
cmake/components/rosekins/: CMakeLists.txt
cmake/components/rotarydeltakins/: CMakeLists.txt
cmake/components/rotatekins/: CMakeLists.txt
cmake/components/sc_tp/: CMakeLists.txt  runtest
cmake/components/sc_tp/preview-0/: readme.txt  sc_tp.c
cmake/components/sc_tp/preview-1/: readme.md  sc_tp.c
cmake/components/sc_tp/preview-2/: sc_tp.c
cmake/components/sc_tp/preview-3/: howto.txt  sc_arcs.cpp  sc_arcs.h  sc_block.h  sc_engine.cpp  sc_engine.h  sc_interpolate.cpp  sc_interpolate.h  sc_lines.cpp  sc_lines.h  sc_optimizer.cpp  sc_optimizer.h  sc_planner.cpp  sc_planner.h  sc_struct.cpp  sc_struct.h  sc_tp.c
cmake/components/sc_tp_src/: sc_arcs.cpp  sc_arcs.h  sc_block.c  sc_block.h  sc_conversion.c  sc_conversion.h  sc_extern.h  sc_interpolate.c  sc_interpolate.h  sc_lines.cpp  sc_lines.h  sc_optimizer.cpp  sc_optimizer.h  sc_ruckig.cpp  sc_ruckig.h  sc_struct.cpp  sc_struct.h  sc_tp.c  sc_vector.cpp  sc_vector.h
cmake/components/scale/: CMakeLists.txt
cmake/components/scarakins/: CMakeLists.txt
cmake/components/scorbotkins/: CMakeLists.txt
cmake/components/scurve/: CMakeLists.txt  readme.md  runtest  sc_engine.c  sc_engine.h  scurve.c  scurve.h
cmake/components/sim_spindle/: CMakeLists.txt
cmake/components/switchkins/: CMakeLists.txt
cmake/components/test/: CMakeLists.txt  readme.md  runtest
cmake/components/test_src/: test.c  test.h
cmake/components/threads/: CMakeLists.txt
cmake/components/tp/: CMakeLists.txt
cmake/components/tp_src/: tp.c
cmake/components/tpmod/: CMakeLists.txt
cmake/components/tripodkins/: CMakeLists.txt
cmake/components/trivkins/: CMakeLists.txt
cmake/components/ugenserkins/: CMakeLists.txt
cmake/components/xyzac-trt-kins/: CMakeLists.txt
cmake/components/xyzbc-trt-kins/: CMakeLists.txt
cmake/gcode_py/: CMakeLists.txt  gcode.so.0
cmake/hal_lib/: CMakeLists.txt
cmake/hal_py/: CMakeLists.txt  _hal.so.0
cmake/hal_tlc/: CMakeLists.txt
cmake/halcmd/: CMakeLists.txt
cmake/halmeter/: CMakeLists.txt
cmake/halrmt/: CMakeLists.txt
cmake/halscope/: CMakeLists.txt
cmake/halui/: CMakeLists.txt
cmake/inivar/: CMakeLists.txt
cmake/io/: CMakeLists.txt
cmake/iov2/: CMakeLists.txt  iov2
cmake/libcanterp/: CMakeLists.txt
cmake/liblinuxcnc/: CMakeLists.txt
cmake/liblinuxcnchal/: CMakeLists.txt
cmake/liblinuxcncini/: CMakeLists.txt
cmake/libnml/: CMakeLists.txt
cmake/libposemath/: CMakeLists.txt
cmake/libpyplugin/: CMakeLists.txt
cmake/librs274/: CMakeLists.txt
cmake/libtooldata/: CMakeLists.txt
cmake/lineardeltakins_py/: CMakeLists.txt  lineardeltakins.so.0
cmake/linuxcnc_module_helper/: CMakeLists.txt
cmake/linuxcnc_py/: CMakeLists.txt
cmake/linuxcnc_tlc/: CMakeLists.txt
cmake/linuxcnclcd/: CMakeLists.txt
cmake/linuxcncrsh/: CMakeLists.txt
cmake/linuxcncsvr/: CMakeLists.txt
cmake/milltask/: CMakeLists.txt
cmake/motion_logger/: CMakeLists.txt
cmake/pci_read/: CMakeLists.txt
cmake/pci_write/: CMakeLists.txt
cmake/projects/qt_nml/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  nml.h
cmake/projects/qt_occt/: CMakeLists.txt
cmake/projects/qt_occt_src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/projects/qt_occt_src/backup/: CMakeLists.txt  color_pallete.xml  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
cmake/projects/qt_occt_src/dxf/: test.dxf  test.dxf~
cmake/projects/qt_occt_src/hal/: halio.cpp  halio.h
cmake/projects/qt_occt_src/libcavalier/: README.md  cavaliercontours.cpp  cavaliercontours.h  intrcircle2circle2.hpp  intrlineseg2circle2.hpp  (+11 more)
cmake/projects/qt_ruckig_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  opengl.cpp  opengl.h  readme.md
cmake/rotarydeltakins_py/: CMakeLists.txt  rotarydeltakins.so.0
cmake/rtapi/: CMakeLists.txt
cmake/rtlib/: lcec_conf
cmake/sai/: CMakeLists.txt
cmake/schedrmt/: CMakeLists.txt
cmake/scripts/: 5axisgui  axis  axis-remote  debuglevel  elbpcom  gladevcp  gmoccapy  gremlin  gremlin_view  gscreen  hal_input  hal_manualtoolchange  halcompile  halshow  hbmgui  hexagui  image-to-gcode  lineardelta  lintini  linuxcnctop  maho600gui  max5gui  mdi  mdro  melfagui  millturngui  mitsub_vfd  modcompile  mqtt-publisher  ngcgui  pmx485  pmx485-test  pncconf  puma560gui  pumagui  pyngcgui  pyui  pyvcp  qtplasmac-cfg2prefs  qtplasmac-materials  (+17 more)
cmake/togl_py/: CMakeLists.txt
(+15757 files in other folders)
